# fastcam

./: CMakeLists.txt  build.sh  fswebcam.c
lib/: config.h  dec.h  log.c  src.c  src_v4l2.c
lib/fastcam/: dec.c  dec_bayer.cpp  dec_grey.cpp  dec_jpeg.c  dec_jpeg.cpp  dec_jpeg.h  dec_png.cpp  dec_rgb.cpp  dec_s561.cpp  dec_yuv.cpp  effects.c  log.c  log.h  parse.c  parse.cpp  parse.h  src.c  src.cpp  src.h  src_file.c  src_file.cpp  src_raw.c  src_raw.cpp  src_test.cpp  src_v4l1.c  src_v4l2.c  src_v4l2.cpp  videodev.h  videodev2.h  videodev_mjpeg.h
src/: fswebcam.c  fswebcam.cpp
